--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "prueba-tecnica-react-1",
+  "homepage": "https://pertixx.github.io/prueba-tecnica-react-1/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
